# pydevd-pycharm-wheels

./: README.md  prepare.py  pyproject.toml  replace.py
.github/workflows/: publish-wheels.yaml
