[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "Cython",
]

build-backend = "setuptools.build_meta"

[tool.cibuildwheel.macos]
before-build = "pydevd_attach_to_process/linux_and_mac/compile_mac.sh"
[tool.cibuildwheel.windows]
before-build = "pydevd_attach_to_process/windows/compile_windows.bat"
[tool.cibuildwheel.linux]
before-build = "if [ \"$(uname -m)\" = \"aarch64\" ]; then; pydevd_attach_to_process/linux_and_mac/compile_linux_aarch64.sh; else pydevd_attach_to_process/linux_and_mac/compile_linux.sh; fi"
