[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "Cython",
]

build-backend = "setuptools.build_meta"

[tool.cibuildwheel.macos]
before-all = "pushd pydevd_attach_to_process/linux_and_mac && ./compile_mac.sh && popd"
[tool.cibuildwheel.windows]
before-all = "pushd pydevd_attach_to_process/windows && cmd /c compile_windows.bat && popd"
[tool.cibuildwheel.linux]
before-all = "yum install glibc-devel.i686 && pushd pydevd_attach_to_process/linux_and_mac && if [ \"$(uname -m)\" = \"aarch64\" ]; then ./compile_linux_aarch64.sh; else ./compile_linux.sh; fi && popd"
